fixed: vertical alignment

--- a/src/assetbundles/src/css/Translations.css
+++ b/src/assetbundles/src/css/Translations.css
@@ -777,8 +777,8 @@ body.ltr .widget[data-type="acclaro\\translations\\widgets\\NewAndModifiedEntrie
     padding-top: 10px !important;
 }
 
-.pt-5 {
-    padding-top: 5px !important;
+.pt-7 {
+    padding-top: 7px !important;
 }
 
 .w-300 {
